tests/baselines/reference/invalidLetInForOfAndForIn_ES5.errors.txt
tests/cases/compiler/invalidLetInForOfAndForIn_ES5.ts(5,13): error TS1005: ',' expected.
tests/cases/compiler/invalidLetInForOfAndForIn_ES5.ts(5,14): error TS1181: Array element destructuring pattern expected.
tests/cases/compiler/invalidLetInForOfAndForIn_ES5.ts(5,14): error TS2695: Left side of comma operator is unused and has no side effects.
tests/cases/compiler/invalidLetInForOfAndForIn_ES5.ts(5,14): error TS2695: Left side of comma operator is unused and has no side effects.
tests/cases/compiler/invalidLetInForOfAndForIn_ES5.ts(5,19): error TS1005: ';' expected.
tests/cases/compiler/invalidLetInForOfAndForIn_ES5.ts(5,20): error TS1128: Declaration or statement expected.


==== tests/cases/compiler/invalidLetInForOfAndForIn_ES5.ts (6 errors) ====
    // This should be an error
    // More details: http://www.ecma-international.org/ecma-262/6.0/#sec-iteration-statements
    
    var let = 10;
    for (let of [1,2,3]) {}
                ~
!!! error TS1005: ',' expected.
                 ~
!!! error TS1181: Array element destructuring pattern expected.
                 ~
!!! error TS2695: Left side of comma operator is unused and has no side effects.
                 ~~~
!!! error TS2695: Left side of comma operator is unused and has no side effects.
                      ~
!!! error TS1005: ';' expected.
                       ~
!!! error TS1128: Declaration or statement expected.
    
    for (let in [1,2,3]) {}
     
    
    